# empty-proj

./: .travis.yml  CMakeLists.txt  COPYING  README.md  README.txt  appveyor.yml  clone  index.html  params.json  travis_email_artifacts  travis_setup
cmake/: CodeCoverage.cmake  HunterGate.cmake  ProjTools.cmake
doc/: CMakeLists.txt  Doxyfile.in
test/: CMakeLists.txt
tools/: CMakeLists.txt  build  clean  codecov  commit  createdir  createhdr  createhdrlib  createlib  createprog  createsrc  createtest  find_term  findlicense  findterm  install  pack  regen  test_on_install  update_doc  valprof
unittest/: CMakeLists.txt  unittest.h  unittest.hpp
unittest/test/: CMakeLists.txt  test_cpp_unittest.cpp  test_unittest.c
